JafaBin/JaFA-main/JaFA.output
Terminals unused in grammar

    BAD_TOKEN


Grammar

    0 $accept: source $end

    1 source: SUGOD flow HUMAN END

    2 flow: ε
    3     | flow step

    4 step: display DOT
    5     | setup DOT
    6     | modify DOT
    7     | compute DOT

    8 setup: category batch

    9 category: INT_TYPE
   10         | CHAR_TYPE

   11 batch: item
   12      | item COMMA batch

   13 item: NAME
   14     | NAME SET value

   15 modify: NAME mode value

   16 mode: SET
   17     | ADD_SET
   18     | SUB_SET
   19     | MUL_SET
   20     | DIV_SET

   21 display: SHOW L_PAREN R_PAREN
   22        | SHOW L_PAREN arg_list R_PAREN

   23 arg_list: arg
   24         | arg COMMA arg_list

   25 arg: value
   26    | STRING_VAL

   27 compute: value

   28 value: combine

   29 combine: factor
   30        | combine ADD factor
   31        | combine SUB factor

   32 factor: base
   33       | factor MUL base
   34       | factor DIV base

   35 base: NUM_VAL
   36     | CHAR_VAL
   37     | NAME
   38     | L_PAREN value R_PAREN
   39     | SUB base


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SUGOD (258) 1
    HUMAN (259) 1
    END (260) 1
    BAD_TOKEN (261)
    INT_TYPE (262) 9
    CHAR_TYPE (263) 10
    NAME <id> (264) 13 14 15 37
    NUM_VAL <num> (265) 35
    CHAR_VAL <ch> (266) 36
    STRING_VAL <str> (267) 26
    SET <op> (268) 14 16
    ADD_SET <op> (269) 17
    SUB_SET <op> (270) 18
    MUL_SET <op> (271) 19
    DIV_SET <op> (272) 20
    ADD (273) 30
    SUB (274) 31 39
    MUL (275) 33
    DIV (276) 34
    L_PAREN (277) 21 22 38
    R_PAREN (278) 21 22 38
    COMMA (279) 12 24
    DOT (280) 4 5 6 7
    SHOW (281) 21 22


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    source (28)
        on left: 1
        on right: 0
    flow (29)
        on left: 2 3
        on right: 1 3
    step (30)
        on left: 4 5 6 7
        on right: 3
    setup (31)
        on left: 8
        on right: 5
    category (32)
        on left: 9 10
        on right: 8
    batch (33)
        on left: 11 12
        on right: 8 12
    item (34)
        on left: 13 14
        on right: 11 12
    modify (35)
        on left: 15
        on right: 6
    mode <op> (36)
        on left: 16 17 18 19 20
        on right: 15
    display (37)
        on left: 21 22
        on right: 4
    arg_list (38)
        on left: 23 24
        on right: 22 24
    arg (39)
        on left: 25 26
        on right: 23 24
    compute (40)
        on left: 27
        on right: 7
    value <expr> (41)
        on left: 28
        on right: 14 15 25 27 38
    combine <expr> (42)
        on left: 29 30 31
        on right: 28 30 31
    factor <expr> (43)
        on left: 32 33 34
        on right: 29 30 31 33 34
    base <expr> (44)
        on left: 35 36 37 38 39
        on right: 32 33 34 39


State 0

    0 $accept: • source $end

    SUGOD  shift, and go to state 1

    source  go to state 2


State 1

    1 source: SUGOD • flow HUMAN END

    $default  reduce using rule 2 (flow)

    flow  go to state 3


State 2

    0 $accept: source • $end

    $end  shift, and go to state 4


State 3

    1 source: SUGOD flow • HUMAN END
    3 flow: flow • step

    HUMAN      shift, and go to state 5
    INT_TYPE   shift, and go to state 6
    CHAR_TYPE  shift, and go to state 7
    NAME       shift, and go to state 8
    NUM_VAL    shift, and go to state 9
    CHAR_VAL   shift, and go to state 10
    SUB        shift, and go to state 11
    L_PAREN    shift, and go to state 12
    SHOW       shift, and go to state 13

    step      go to state 14
    setup     go to state 15
    category  go to state 16
    modify    go to state 17
    display   go to state 18
    compute   go to state 19
    value     go to state 20
    combine   go to state 21
    factor    go to state 22
    base      go to state 23


State 4

    0 $accept: source $end •

    $default  accept


State 5

    1 source: SUGOD flow HUMAN • END

    END  shift, and go to state 24


State 6

    9 category: INT_TYPE •

    $default  reduce using rule 9 (category)


State 7

   10 category: CHAR_TYPE •

    $default  reduce using rule 10 (category)


State 8

   15 modify: NAME • mode value
   37 base: NAME •

    SET      shift, and go to state 25
    ADD_SET  shift, and go to state 26
    SUB_SET  shift, and go to state 27
    MUL_SET  shift, and go to state 28
    DIV_SET  shift, and go to state 29

    $default  reduce using rule 37 (base)

    mode  go to state 30


State 9

   35 base: NUM_VAL •

    $default  reduce using rule 35 (base)


State 10

   36 base: CHAR_VAL •

    $default  reduce using rule 36 (base)


State 11

   39 base: SUB • base

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    base  go to state 32


State 12

   38 base: L_PAREN • value R_PAREN

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    value    go to state 33
    combine  go to state 21
    factor   go to state 22
    base     go to state 23


State 13

   21 display: SHOW • L_PAREN R_PAREN
   22        | SHOW • L_PAREN arg_list R_PAREN

    L_PAREN  shift, and go to state 34


State 14

    3 flow: flow step •

    $default  reduce using rule 3 (flow)


State 15

    5 step: setup • DOT

    DOT  shift, and go to state 35


State 16

    8 setup: category • batch

    NAME  shift, and go to state 36

    batch  go to state 37
    item   go to state 38


State 17

    6 step: modify • DOT

    DOT  shift, and go to state 39


State 18

    4 step: display • DOT

    DOT  shift, and go to state 40


State 19

    7 step: compute • DOT

    DOT  shift, and go to state 41


State 20

   27 compute: value •

    $default  reduce using rule 27 (compute)


State 21

   28 value: combine •
   30 combine: combine • ADD factor
   31        | combine • SUB factor

    ADD  shift, and go to state 42
    SUB  shift, and go to state 43

    $default  reduce using rule 28 (value)


State 22

   29 combine: factor •
   33 factor: factor • MUL base
   34       | factor • DIV base

    MUL  shift, and go to state 44
    DIV  shift, and go to state 45

    $default  reduce using rule 29 (combine)


State 23

   32 factor: base •

    $default  reduce using rule 32 (factor)


State 24

    1 source: SUGOD flow HUMAN END •

    $default  reduce using rule 1 (source)


State 25

   16 mode: SET •

    $default  reduce using rule 16 (mode)


State 26

   17 mode: ADD_SET •

    $default  reduce using rule 17 (mode)


State 27

   18 mode: SUB_SET •

    $default  reduce using rule 18 (mode)


State 28

   19 mode: MUL_SET •

    $default  reduce using rule 19 (mode)


State 29

   20 mode: DIV_SET •

    $default  reduce using rule 20 (mode)


State 30

   15 modify: NAME mode • value

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    value    go to state 46
    combine  go to state 21
    factor   go to state 22
    base     go to state 23


State 31

   37 base: NAME •

    $default  reduce using rule 37 (base)


State 32

   39 base: SUB base •

    $default  reduce using rule 39 (base)


State 33

   38 base: L_PAREN value • R_PAREN

    R_PAREN  shift, and go to state 47


State 34

   21 display: SHOW L_PAREN • R_PAREN
   22        | SHOW L_PAREN • arg_list R_PAREN

    NAME        shift, and go to state 31
    NUM_VAL     shift, and go to state 9
    CHAR_VAL    shift, and go to state 10
    STRING_VAL  shift, and go to state 48
    SUB         shift, and go to state 11
    L_PAREN     shift, and go to state 12
    R_PAREN     shift, and go to state 49

    arg_list  go to state 50
    arg       go to state 51
    value     go to state 52
    combine   go to state 21
    factor    go to state 22
    base      go to state 23


State 35

    5 step: setup DOT •

    $default  reduce using rule 5 (step)


State 36

   13 item: NAME •
   14     | NAME • SET value

    SET  shift, and go to state 53

    $default  reduce using rule 13 (item)


State 37

    8 setup: category batch •

    $default  reduce using rule 8 (setup)


State 38

   11 batch: item •
   12      | item • COMMA batch

    COMMA  shift, and go to state 54

    $default  reduce using rule 11 (batch)


State 39

    6 step: modify DOT •

    $default  reduce using rule 6 (step)


State 40

    4 step: display DOT •

    $default  reduce using rule 4 (step)


State 41

    7 step: compute DOT •

    $default  reduce using rule 7 (step)


State 42

   30 combine: combine ADD • factor

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    factor  go to state 55
    base    go to state 23


State 43

   31 combine: combine SUB • factor

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    factor  go to state 56
    base    go to state 23


State 44

   33 factor: factor MUL • base

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    base  go to state 57


State 45

   34 factor: factor DIV • base

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    base  go to state 58


State 46

   15 modify: NAME mode value •

    $default  reduce using rule 15 (modify)


State 47

   38 base: L_PAREN value R_PAREN •

    $default  reduce using rule 38 (base)


State 48

   26 arg: STRING_VAL •

    $default  reduce using rule 26 (arg)


State 49

   21 display: SHOW L_PAREN R_PAREN •

    $default  reduce using rule 21 (display)


State 50

   22 display: SHOW L_PAREN arg_list • R_PAREN

    R_PAREN  shift, and go to state 59


State 51

   23 arg_list: arg •
   24         | arg • COMMA arg_list

    COMMA  shift, and go to state 60

    $default  reduce using rule 23 (arg_list)


State 52

   25 arg: value •

    $default  reduce using rule 25 (arg)


State 53

   14 item: NAME SET • value

    NAME      shift, and go to state 31
    NUM_VAL   shift, and go to state 9
    CHAR_VAL  shift, and go to state 10
    SUB       shift, and go to state 11
    L_PAREN   shift, and go to state 12

    value    go to state 61
    combine  go to state 21
    factor   go to state 22
    base     go to state 23


State 54

   12 batch: item COMMA • batch

    NAME  shift, and go to state 36

    batch  go to state 62
    item   go to state 38


State 55

   30 combine: combine ADD factor •
   33 factor: factor • MUL base
   34       | factor • DIV base

    MUL  shift, and go to state 44
    DIV  shift, and go to state 45

    $default  reduce using rule 30 (combine)


State 56

   31 combine: combine SUB factor •
   33 factor: factor • MUL base
   34       | factor • DIV base

    MUL  shift, and go to state 44
    DIV  shift, and go to state 45

    $default  reduce using rule 31 (combine)


State 57

   33 factor: factor MUL base •

    $default  reduce using rule 33 (factor)


State 58

   34 factor: factor DIV base •

    $default  reduce using rule 34 (factor)


State 59

   22 display: SHOW L_PAREN arg_list R_PAREN •

    $default  reduce using rule 22 (display)


State 60

   24 arg_list: arg COMMA • arg_list

    NAME        shift, and go to state 31
    NUM_VAL     shift, and go to state 9
    CHAR_VAL    shift, and go to state 10
    STRING_VAL  shift, and go to state 48
    SUB         shift, and go to state 11
    L_PAREN     shift, and go to state 12

    arg_list  go to state 63
    arg       go to state 51
    value     go to state 52
    combine   go to state 21
    factor    go to state 22
    base      go to state 23


State 61

   14 item: NAME SET value •

    $default  reduce using rule 14 (item)


State 62

   12 batch: item COMMA batch •

    $default  reduce using rule 12 (batch)


State 63

   24 arg_list: arg COMMA arg_list •

    $default  reduce using rule 24 (arg_list)
